# mcdc-test

./: .bazelrc  BUILD.bazel  Makefile  README.md  WORKSPACE  build_and_test.sh  functions.cpp  generate_coverage_report.sh  main.cpp  main.hpp  main_test.cpp  node.cpp  node_test.cpp  path_logic.cpp  path_logic.hpp
coverage_bazel/coverage_report/: cmd_line  coverage.info  coverage.unfiltered.info  index.html  node.pic.gcno  node_test.pic.gcda  node_test.pic.gcno  path_logic.pic.gcda  path_logic.pic.gcno
coverage_bazel/coverage_report/cwd/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  node_test.cpp.func-c.html  node_test.cpp.func.html  node_test.cpp.gcov.frameset.html  node_test.cpp.gcov.html  node_test.cpp.gcov.overview.html  path_logic.cpp.func-c.html  path_logic.cpp.func.html  path_logic.cpp.gcov.frameset.html  path_logic.cpp.gcov.html  path_logic.cpp.gcov.overview.html
coverage_report/: cmd_line
